# timerrr2.0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NOTES.md  README.md  app.py  build.sh  docker-compose.yml  idea.txt  migrate_trial.py  pyproject.toml  render.yaml  requirements.txt  run.py  start.sh  test_stripe.html  wsgi.py
.claude/: settings.local.json
.codex/environments/: environment.toml
app/: __init__.py  auth.py  client.py  decorators.py  entries.py  main.py  models.py  routes.py  socketio_events.py  stripe.py  timer.py  timesheets.py
app/static/: robots.txt  sitemap.xml
app/static/css/: style.css
app/templates/: CLAUDE.md  base.html  entries.html  index.html  login.html  register.html  settings.html  timer.html  timesheets.html
