[project]
name = "timerrr2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-login==0.6.3",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==3.1.1",
    "gevent==25.9.1",
    "gevent-websocket==0.10.1",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "python-dotenv==1.1.1",
    "python-engineio==4.12.2",
    "python-socketio==5.13.0",
    "requests==2.32.5",
    "simple-websocket==1.1.0",
    "sqlalchemy==2.0.43",
    "stripe==11.2.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
